--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,22 @@
 buildscript {
     ext {
-        compose_ui_version = '1.1.1'
+        // Core
+        core_ktx_version = '1.10.1'
+        lifecycle_runtime_ktx_version = '2.6.1'
+        appcompat_version = '1.6.1'
+        compose_ui_version = '1.4.3'
+        activity_compose_version = '1.7.1'
+        material_compose_version = '1.4.3'
+        nav_version = '2.5.3'
+
+        //Testing
+        junit_version = '4.13.2'
+        junit_ext_version = '1.1.5'
+        espresso_version = '3.5.1'
+
+        // 3rd party
+        //Koin
+        koin_version = '3.4.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
