--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         material_compose_version = '1.4.3'
         nav_version = '2.5.3'
 
+        kotlin_compiler_ext_version = '1.4.4'
+
         //Testing
         junit_version = '4.13.2'
         junit_ext_version = '1.1.5'
@@ -20,7 +22,7 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.android.application' version '8.0.1' apply false
+    id 'com.android.library' version '8.0.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
 }
