--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,15 +1,17 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+
+    id 'kotlin-parcelize'
 }
 
 android {
     namespace 'com.iruda.data'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 24
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -32,7 +34,9 @@ android {
 
 dependencies {
 
-    implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation project(path: ':domain')
+
+    api "androidx.core:core-ktx:$core_ktx_version"
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
