--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ buildscript {
         compose_ui_version = '1.4.3'
         activity_compose_version = '1.7.1'
         material_compose_version = '1.4.3'
-        nav_version = '2.5.3'
 
         kotlin_compiler_ext_version = '1.4.4'
 
@@ -16,7 +15,9 @@ buildscript {
         junit_ext_version = '1.1.5'
         espresso_version = '3.5.1'
 
-        // 3rd party
+        //Navigation
+        voyager_version = '1.0.0-rc05'
+
         //Koin
         koin_version = '3.4.0'
     }
@@ -25,4 +26,6 @@ plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+
+    id 'com.google.devtools.ksp' version '1.8.10-1.0.9'
 }
